--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "mysql2": "^2.0.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sharp": "^0.23.3"
   }
 }
